@@ -62,6 +62,20 @@ class Ctx:
     self.cross_branch_commits = True
     self.retain_conflicting_attic_files = False
 
+    self.initial_project_commit_message = (
+        'Standard project directories initialized by cvs2svn.'
+        )
+    self.post_commit_message = (
+        'This commit was generated by cvs2svn to compensate for '
+        'changes in r%(revnum)d, which included commits to RCS files '
+        'with non-trunk default branches.'
+        )
+    self.symbol_commit_message = (
+        "This commit was manufactured by cvs2svn to create %(symbol_type)s "
+        "'%(symbol_name)s'."
+        )
+
+
   def get_temp_filename(self, basename):
     return os.path.join(self.tmpdir, basename)
 
